# semversioner

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.changes/: 0.11.0.json  0.12.0.json  0.6.10.json  0.6.12.json  0.6.13.json  0.6.14.json  0.6.6.json  0.6.7.json  0.7.1.json  0.8.1.json
.changes/next-release/: minor-20201010133819.json  minor-20201229115128.json  minor-20210112122838.json  minor-20210113114242-770.json  minor-20210113114516-185.json  minor-20210326133507277741.json  patch-20201010133756.json  patch-20201229114517.json  patch-20201229114919.json  patch-20210113114818-397.json  patch-20210325115332579162.json
.github/workflows/: build-and-publish.yml  build-and-test.yml  publish.yml  release.yml
.semversioner/: 0.10.0.json  0.11.0.json  0.12.0.json  0.13.0.json  0.6.10.json  0.6.11.json  0.6.12.json  0.6.13.json  0.6.14.json  0.6.15.json  0.6.16.json  0.6.6.json  0.6.7.json  0.6.8.json  0.6.9.json  0.7.0.json  0.7.1.json  0.8.0.json  0.8.1.json  0.9.0.json  1.0.0.json  1.1.0.json  1.2.0.json  1.3.0.json  1.4.0.json  1.4.1.json  1.5.0.json  1.5.1.json  1.5.2.json  1.6.0.json  1.7.0.json  2.0.0.json  2.0.1.json  2.0.2.json  2.0.3.json  2.0.4.json  2.0.5.json  2.0.6.json  2.0.7.json  2.0.8.json  (+7 more)
.semversioner/next-release/: major-20211221112038352297.json  major-20211221112133562997.json  major-20231224051035531250.json  major-20231224051138380509.json  major-20231224062500751956.json  major-20260412061824795333.json  major-20260412061824951604.json  major-20260412061825107882.json  major-20260412110142471175.json  major-20260412112326089161.json  minor-20211221113203170890.json  minor-20211221113225146991.json  minor-20220515125547150969.json  minor-20220618092847312842.json  minor-20220823191119495680.json  minor-20220823191238807401.json  minor-20220901152637782283.json  minor-20221203131113831932.json  minor-20230113122551117180.json  minor-20230120104725042981.json  minor-20230719182535847105.json  minor-20231224043259516350.json  minor-20231224043423344714.json  minor-20240504002812418206.json  minor-20250719232942646010.json  minor-20260412051841605307.json  minor-20260412110242328440.json  minor-20260412121326616759.json  minor-20260606150445244119.json  minor-20260607073053998315.json  minor-20260607073057043208.json  patch-20211221112902196216.json  patch-20211221113044709228.json  patch-20211221113105025480.json  patch-20211221113121798674.json  patch-20211221113140634655.json  patch-20211221113836637568.json  patch-20211221115540792061.json  patch-20220902232041070239.json  patch-20221019085748511887.json  (+26 more)
semversioner/: __init__.py  __main__.py  cli.py  core.py  models.py  storage.py  version.py
tests/: cli_test.py  core_test.py  fixtures.py  security_test.py  version_test.py
tests/resources/: template_01.j2  template_01_readme.md  template_02.j2  template_02_readme.md  template_03.j2  template_03_readme.md  template_04.j2  template_04_readme.md
