[tool.poetry]
name = "semversioner"
version = "2.0.2"
description = "Properly manage semver in your repository"
authors = ["Raul Gomis <raulgomis@gmail.com>"]
license = "MIT"
readme = "README.md"
# The licence and python version classifiers are automatically included by Poetry
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
Jinja2 = "^3.1.3"
packaging = "^24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
importlib-resources = "^6.4.0"
mypy = "^1.10.0"
flake8 = "^6.1.0"
poethepoet = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
_flake8 = "flake8 . --count --show-source --statistics"
_mypy = "mypy semversioner tests"
_semversioner_release = "semversioner release"
_semversioner_changelog = "semversioner changelog > CHANGELOG.md"
_semversioner_update_toml_version = "update-toml --path tool.poetry.version --value \"$(semversioner current-version)\" pyproject.toml"

test = "python -m pytest"
clean = "rm -vrf .mypy_cache .pytest_cache __pycache__/*"

[[tool.poe.tasks.release]]
sequence = ['_semversioner_release', '_semversioner_changelog', '_semversioner_update_toml_version']
ignore_fail = 'return_non_zero'

[[tool.poe.tasks.lint]]
sequence = ["_flake8", "_mypy"]
ignore_fail = 'return_non_zero'

[tool.mypy]
python_version = '3.8'
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_unimported = true