[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
max-complexity = 10
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .github,
    .mypy_cache,
    .pytest_cache,
    .semversioner
ignore = E501
per-file-ignores =
    semversioner/__init__.py: F401,F403